# cjx-v1.1-build

./: .gitignore  cjx.py  cjxupdate.py  pyproject.toml  requirements.txt
app/: clone.py  doctor.py  env.py  jfxml.py  os_handler.py  simple.py
helpers/: os_identifier.py
src/cjx/: cjx.py
src/cjxupdate/: cjxupdate.py
src/commands/: clone.py  doctor.py  jfxml.py  simple.py
src/helpers/: os_identifier.py
src/utils/: animator.py  file_download.py
templates/jfxml/: README.md
templates/jfxml/src/main/java/com/: App.java.txt  HelloWorldController.java.txt
templates/jfxml/src/main/resources/com/: HelloWorld.fxml.txt
templates/simple/: README.md
templates/simple/src/: App.java.txt
tests/: test_cli.py
